--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             line-height: 1.6;
         }
         .hero-section {
-            background-image: url('Images/hero.jpg'); /* Placeholder for mystery */
+            background-image: url('Images/Hero.jpg'); /* Placeholder for mystery */
             background-size: cover;
             background-position: center;
             height: 60vh; /* Responsive height */
