--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
         <section class="card fade-in" style="animation-delay: 1.4s;">
             <h2 class="text-3xl md:text-4xl mb-6 text-emerald-600 text-center">
-                Explora el Paraíso y Más Allá 📸
+                Explora el Paraíso y Más allá 📸
             </h2>
             <p class="text-lg text-gray-800 mb-6 text-center">
                 Un vistazo a la magia que nos espera en Camboya y Koh Rong.
@@ -407,23 +407,23 @@
             <div class="image-gallery">
                 <div class="gallery-item">
                     <img src="Images/2.jpg" alt="">
-                    <p>Aguas cristalinas</p>
+                    <p>Buceo en aguas cristalinas</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Images/3.jpg" alt="">
-                    <p>Fiestas en la playa al atardecer</p>
+                    <p>Noches mágicas bajo un cielo estrellado, donde el plancton bioluminiscente ilumina el mar.</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Images/4.jpg" alt="">
-                    <p>Puestas de sol épicas</p>
+                    <p>Cenas inolvidables con los pies en la arena, disfrutando de la gastronomía local mientras el sol se despide.</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Images/5.jpg" alt="">
-                    <p>Misteriosas ruinas antiguas</p>
+                    <p>La auténtica vida isleña: barcos pesqueros tradicionales que pintan de color las tranquilas bahías de Koh Rong.</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Images/6.jpg" alt="">
-                    <p>Exuberante vida marina</p>
+                    <p>Explorando el legado: vestigios de antiguas civilizaciones que susurran historias en medio de la exuberante vegetación.</p>
                 </div>
             </div>
         </section>
@@ -600,7 +600,7 @@
             }
 
             partnerYes.addEventListener('change', togglePartnerNameField);
-            partnerNo.addEventListener('change', togglePartnerNoField);
+            partnerNo.addEventListener('change', togglePartnerNameField);
             togglePartnerNameField(); // Set initial state
 
             // Basic form submission handling (for demonstration, no actual backend)
