--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             position: relative;
         }
         .hero-overlay {
-            background-color: rgba(0, 0, 0, 0.6); /* Dark overlay for text readability */
+            background-color: rgba(0, 0, 0, 0.3); /* Adjusted: Made more transparent for lighter background */
             position: absolute;
             top: 0;
             left: 0;
@@ -187,7 +187,7 @@
 <body class="p-0 m-0">
 
     <audio id="background-music" loop autoplay>
-        <source src="" type="audio/mpeg">
+        <source src="Images/Musica.mp3" type="audio/mpeg">
         Tu navegador no soporta el elemento de audio.
     </audio>
     <div class="fixed bottom-4 right-4 z-50">
@@ -368,7 +368,7 @@
 
         <section class="card fade-in" style="animation-delay: 1.2s;">
             <h2 class="text-3xl md:text-4xl mb-6 text-emerald-600 text-center">
-                ¿Cómo llegar a tu Paraíso? 🗺️
+                ¿Cómo llegar al Paraíso? 🗺️ <!-- Updated: Changed "tu" to "al" -->
             </h2>
             <p class="text-lg text-gray-800 mb-4">
                 La aventura comienza cuando tú lo decidas:
@@ -400,7 +400,7 @@
             </p>
             <div class="text-center mb-8">
                 <img src="Images/Mapa.jpg" alt="" class="rounded-lg shadow-md inline-block max-w-full h-auto">
-                <p class="text-sm text-gray-500 mt-2">
+                <p class="text-sm text-gray-500 text-center">
                     
                 </p>
             </div>
@@ -432,7 +432,7 @@
 
         <section id="rsvp-section" class="card fade-in" style="animation-delay: 1.6s;">
             <h2 class="text-3xl md:text-4xl mb-6 text-emerald-600 text-center">
-                ¡Confirma tu Asistencia antes del 15 de julio de 2026! 📬
+                ¡Confirma tu Asistencia antes del 8 de junio de 2026! 📬 <!-- Updated: Deadline changed to June 8, 2026 -->
             </h2>
             <p class="text-xl text-gray-800 mb-6 text-center">
                 Para que todo sea perfecto y asegurar tu lugar en esta celebración épica, necesito saber si contaré contigo.
