--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
         <section class="card fade-in" style="animation-delay: 1.2s;">
             <h2 class="text-3xl md:text-4xl mb-6 text-emerald-600 text-center">
-                ¿Cómo llegar al Paraíso? 🗺️ <!-- Updated: Changed "tu" to "al" -->
+                ¿Cómo llegar al Paraíso? 🗺️
             </h2>
             <p class="text-lg text-gray-800 mb-4">
                 La aventura comienza cuando tú lo decidas:
@@ -432,13 +432,13 @@
 
         <section id="rsvp-section" class="card fade-in" style="animation-delay: 1.6s;">
             <h2 class="text-3xl md:text-4xl mb-6 text-emerald-600 text-center">
-                ¡Confirma tu Asistencia antes del 8 de junio de 2026! 📬 <!-- Updated: Deadline changed to June 8, 2026 -->
+                ¡Confirma tu Asistencia antes del 8 de junio de 2026! 📬
             </h2>
             <p class="text-xl text-gray-800 mb-6 text-center">
                 Para que todo sea perfecto y asegurar tu lugar en esta celebración épica, necesito saber si contaré contigo.
             </p>
 
-            <form class="space-y-4">
+            <form action="https://formspree.io/f/xjkrnavo" method="POST" class="space-y-4"> <!-- Updated: Formspree link added -->
                 <div>
                     <label for="name" class="block text-lg font-medium text-gray-700 mb-2">Tu Nombre Completo:</label>
                     <input type="text" id="name" name="name" class="form-input" placeholder="Ej: Juan Pérez" required>
